Fix search overflow

--- a/css/style.css
+++ b/css/style.css
@@ -86,8 +86,8 @@ main {
 .header-mini .search {
   margin-top: -16px;
   padding: 0;
-  background: #E5E5E5;
-  border: #CECECE 3px solid;
+  background: #e5e5e5;
+  border: #cecece 3px solid;
   height: 3rem;
   min-width: 0;
 }
@@ -167,13 +167,13 @@ main {
 .search input {
   padding-left: 8px;
   flex: 1;
-  min-width: 8em;
+  min-width: 0em;
   background: white;
-  border: solid 1px #CCCCCC;
+  border: solid 1px #cccccc;
 }
 @media screen and (min-width: 992px) {
   .search input {
-    min-width: 12em;
+    min-width: 0em;
   }
 }
 .search input:focus {
@@ -255,6 +255,7 @@ main {
 .header-med .actions .search {
   margin-bottom: auto;
   border-radius: 0 3px 3px 0;
+  overflow: hidden;
 }
 .header-med .actions .search input {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.08);
@@ -292,7 +293,7 @@ main {
   background: #7e808a;
 }
 .header-med .actions .supportButton {
-  background: #4183D7;
+  background: #4183d7;
   color: white;
   border: none;
   margin-left: auto;
@@ -1609,9 +1610,14 @@ main {
   padding: 0.5em 1em;
 }
 .footerContainer .row > * {
-  padding: 16px;
+  padding: 24px;
   padding-left: 0;
   padding-top: 0;
+  padding-right: 12px;
+}
+.footerContainer .row > .col-6:nth-child(2) {
+  padding-left: 12px;
+  padding-right: 0;
 }
 .footerContainer .socialMediaContainer {
   padding: 0;
